----------
v5.0.0-git
----------

[jan] Add CLI script to search for invalid email addresses.
[mjr] Remove Facebook driver.
[jan] Add second home and business phone fields to Kolab backend (Thomas
      Jarosch <thomas.jarosch@intra2net.com>, Request #12776).
[jan] Change sort direction of birthday/anniversary year picker (Request
      #11837).
[mjr] Add ability to store original versions of contact photos when resizing
      them for display.
[mjr] Add tag search to advanced search (Request #13693).
[mms] Added the addGroup API method.
[mjr] Add ability to add special characters to the alpha pager.
[jan] Return ETags with browse() API method.
[jan] Support multi-value RDNs in LDAP DN attributes (horde@iotti.biz, Request
      #11889).


-------
v4.2.19
-------

[mjr] Fix importing vCard LABEL fields (Bug #14584).
[mjr] Fix saving sync preference when no default address book exists (Bug
      #14585).
[mjr] Fix removing virtual address books when calling the removeUserData API
      (Bug #14577).
[jan] Fix fatal error if group contacts from an LDAP server don't exist
      anymore.


-------
v4.2.18
-------

[jan] Remove left over from 10-years-old code (Bug #14521).


-------
v4.2.17
-------

[mjr] Fix regression in sorting contacts by a name field (Bug #14471).
[mjr] Fix regression in saving tags (Bug #14463).


-------
v4.2.16
-------

[mjr] Fix synchronizing email fields in certain cases (Bug #14301).
[jan] Continue removing user data if a source doesn't have an __owner field.
[mjr] Fix over-agressive filtering of search results when searching via the API
      (Bug #13945).


-------
v4.2.15
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Fix searching via the API when specifying fields and not specifying
      source.
[mjr] Require Horde_Perms::DELETE for including an address book  as sync-able.


-------
v4.2.14
-------

[mjr] Fix persisting tags when moving or copying a contact to another address