@@ -39,6 +39,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Show photos when displaying contacts in calendars.
 * [jan] Add CLI script to search for invalid email addresses.
 * [mjr] Remove Facebook driver.
 * [jan] Add second home and business phone fields to Kolab backend (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Request #12776).
@@ -2207,6 +2208,7 @@
    </stability>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Show photos when displaying contacts in calendars.
 * [jan] Add CLI script to search for invalid email addresses.
 * [mjr] Remove Facebook driver.
 * [jan] Add second home and business phone fields to Kolab backend (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Request #12776).
